--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": false
+    "analytics": "8f783a8f-50b4-41ea-b835-52f49cf1c68d"
   },
   "version": 1,
   "newProjectRoot": "projects",
